# learn-sdwah

./: .gitignore  Cargo.toml  README.md
htmx_files/: index.html
htmx_files/ch01_jumping_in/: crud.html  index.html
htmx_files/ch03_developing_endpoints/: crud.html  event.html  index.html  oob.html  todo.html
htmx_files/ch04_recipes_for_common_scenarios/: active-search.html  index.html  input-validate.html  lazy-loading.html
htmx_files/ch04_recipes_for_common_scenarios/boost/: anther.html  anther.js  index.css  index.html
migrations/: 20260609094545_ch03_todos.sql
src/: ch01_jumping_in.rs  ch03_developing_endpoints.rs  ch04_recipes_for_common_scenarios.rs  lib.rs  main.rs  router.rs
